<resources>
    <string name="app_name">壕省钱</string>
    <string name="bottom_text_1">首页</string>
    <string name="bottom_text_2">购物车</string>
    <string name="bottom_text_3">whatup</string>
    <string name="bottom_text_4">我的</string>
    <string name="tv_forget_psd">忘记密码</string>
    <string name="tv_forget_psd_hint">我们已经发送了验证码到你的手机：</string>
    <string name="tv_forget_get_vcode">获取验证码</string>
    <string name="tv_forget_input_vcode">请输入验证码</string>
    <string name="tv_input_mobile">请输入手机号</string>
    <string name="tv_forget_next">下一步</string>
    <string name="tv_forget_useless_no">手机不可用?</string>
    <string name="tv_forget_tip">必须是6-20个字母、数字或符号(除空格)</string>
    <string name="tv_forget_input_new_psd">输入新密码</string>
    <string name="tv_forget_sure_new_psd">确认新密码</string>
    <string name="tv_forget_psd_visible">显示密码</string>
    <string name="tv_register_please">请注册</string>
    <string name="tv_register_input_phone">请输入你的账号或手机号</string>
    <string name="tv_register_nickname">请输入2至22位的昵称</string>
    <string name="tv_register_send_vcode">发送验证码</string>
    <string name="tv_register_input_vcode">请输入收到的验证码</string>
    <string name="tv_register_input_psd">请设置密码</string>
    <string name="tv_register_input_invited">请输入邀请码</string>
    <string name="tv_register_user_agreement">我已阅读并同意</string>
    <string name="register_input_phone">请输入手机号码</string>
    <string name="tv_login_please">请登录</string>
    <string name="tv_login">登录</string>
    <string name="tv_login_forget_psd">忘记密码?</string>
    <string name="tv_login_register">立即注册 ></string>
    <string name="tv_login_input_psd">请输入密码</string>
    <string name="iconfont"><html><font color='#FF3637'>&#xe63a;</font><font color='#4C4C4C'>&#xe63b;</font></html></string>
    <string name="ic_home_calendar">&#xe638;</string>
    <string name="ic_home_message">&#xe639;</string>
    <string name="tv_home_rush">&#xe63f;</string>
    <string name="tv_home_zero_sale"><font color='#333333'>免费0元购</font> <font color='#E61D15'>&#xe632;</font></string>
    <string name="tv_home_exchange"><font color='#333333'>积分兑换</font> <font color='#E61D15'>&#xe63c;</font></string>
    <string name="tv_home_vip_sale"><font color='#DE3C31'>&#xe63d;</font> <font color='#333333'>VIP专享</font></string>
    <string name="tv_sureorder_vip_sale"><font color='#413D37'>&#xe63d;</font>   <font color='#333333'>壕省会员</font></string>
    <string name="tv_uncollect">&#xe627;</string>
    <string name="tv_collect">&#xe626;</string>
    <string name="tv_shopping_cart">&#xe625;</string>
    <string name="tv_shopping_servicer">&#xe624;</string>
    <string name="tv_back">&#xe622;</string>
    <string name="tv_more">&#xe623;</string>
    <string name="me_all_order">&#xe64b;</string>
    <string name="me_setting">&#xe641;</string>
    <string name="tv_coin">&#xe63c;</string>
    <string name="tv_shared">&#xe655;</string>
    <string name="dustbin">&#xe656;</string>
    <string name="ic_qrcode">&#xe653;</string>
    <string name="ic_code">&#xe657;</string>
    <string name="ic_delete">&#xe65c;</string>
    <string name="add">+</string>
    <string name="reduce">-</string>
    <string name="clother_host">人气</string>
    <string name="moren">默认排序</string>
    <string name="clother_nestest">抵扣金额</string>
    <string name="clother_price">价格</string>
    <string name="clother_top">销量</string>
    <string name="exit">取消</string>
    <string name="piece">张</string>
    <string name="jian">件</string>
    <string name="used">已使用</string>
    <string name="estimate">预计</string>
    <string name="deliver_goods">发货</string>
    <string name="de_date">有效期至：</string>
    <string name="wallet">钱包</string>
    <string name="ele_coin">电子币</string>
    <string name="goods_collect">已收藏</string>
    <string name="goods_uncollect">收藏</string>
    <string name="tv_goods_format">规格</string>
    <string name="goods_buy_now">立刻购买</string>
    <string name="goods_add_shoppingcar">加入购物车</string>
    <string name="modify_sure">选好了</string>
    <string name="sure">确定</string>
    <string name="search_hint">抢大额神券</string>
    <string name="search_history">搜索历史</string>
    <string name="search_recommond">推荐搜索</string>
    <string name="search_all_mall">全部商城</string>
    <string name="me_balance">余额</string>
    <string name="me_integral">积分</string>
    <string name="me_order">我的订单</string>
    <string name="me_coupon">我的地址</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_record">浏览记录</string>
    <string name="me_money">充值金额</string>
    <string name="me_recommend">推荐好友</string>
    <string name="me_problem">常见问题</string>
    <string name="me_opinion">意见反馈</string>
    <string name="me_customer_service">客服热线</string>
    <string name="me_privacy">隐私</string>
    <string name="me_about">关于我们</string>
    <string name="me_search_all">查看全部</string>
    <string name="me_fans">我的粉丝</string>
    <string name="me_scan">我的二维码</string>
    <string name="me_shared_friend">分享给好友</string>
    <string name="me_bind_card">认证绑卡</string>
    <string name="me_address">我的地址</string>
    <string name="me_collect">收藏夹</string>
    <string name="get_goods_back">收货返</string>
    <string name="personal_over">完成</string>
    <string name="personal_head_face">头像</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_phone">手机号</string>
    <string name="take_photo">拍摄</string>
    <string name="system_photo">从相册选择</string>
    <string name="pay_psd">支付密码</string>
    <string name="setting_delete_cache">清除缓存</string>
    <string name="about_app">关于壕省钱</string>
    <string name="setting_exit_login">退出登录</string>
    <string name="setting_info">个人信息</string>
    <string name="input_bank_card">请输入正确身份证号码</string>
    <string name="shopping_car">购物车</string>
    <string name="shopping_edit">管理</string>
    <string name="actionBar_edit">编辑</string>
    <string name="all">全选</string>
    <string name="order_total">实付 :</string>
    <string name="choose_pay">选择支付方式</string>
    <string name="pay_zfb">支付宝支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_self">余额支付</string>
    <string name="goods_price">商品价格</string>
    <string name="use_integral">(剩余积分</string>
    <string name="uses_integral">使用积分</string>
    <string name="postage">邮费</string>
    <string name="total_payable">应付总额</string>
    <string name="getpay">提交订单</string>
    <string name="empty_tip">购物车空空如也，快去挑件好货！</string>
    <string name="go_shopping">前去逛逛</string>
    <string name="goods_consignee">收货人</string>
    <string name="goods_consignee_name">收货人:</string>
    <string name="goods_order_freight">运费:</string>
    <string name="goods_phone">手机号</string>
    <string name="goods_local_address">所在地区</string>
    <string name="goods_detail_address">详细地址</string>
    <string name="input_detail_address">请填写详细地址</string>
    <string name="input_address_phone">请填写手机号码</string>
    <string name="input_address_consignee">请填写收货人</string>
    <string name="input_length_limit">收货人长度必须大于2</string>
    <string name="save">保存</string>
    <string name="add_goods_address">添加收货地址</string>
    <string name="order_exit">取消订单</string>
    <string name="query_logistics">查看物流</string>
    <string name="go_pay">去付款</string>
    <string name="no_order_tip">还没有相关的订单呢</string>
    <string name="right_now_pay">立即支付</string>
    <string name="membership">会员特惠</string>
    <string name="pay_choose">选择支付方式</string>
    <string name="pay_invoice">发票</string>
    <string name="order_remarks">备注</string>
    <string name="collect">收藏</string>
    <string name="empty_collect_goods">小主，您还没有收藏哦~</string>
    <string name="recharge_account">充值</string>
    <string name="recharge_sum">充值金额</string>
    <string name="goods_add_address">添加地址</string>
    <string name="you">否</string>
    <string name="wu">是</string>
    <string name="price">¥</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
</resources>