<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable
            name="forget"
            type="com.lzyyd.hsq.viewmodel.ForgetPasswordViewModel" />
        
        
    </data>
    

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgetPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:onClick="@{()->forget.onBackPressed()}"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_back"
                android:textColor="@color/black"
                android:typeface="@{forget.setTypeFace()}"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/text_commom"
            android:textSize="18sp"
            android:text="@string/tv_forget_psd"/>


    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:text="@string/tv_forget_psd_hint"
        android:textColor="#666666"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/text_222222"
        android:textSize="20sp"
        android:text="@{forget.mobileStr}"
        />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_register_vcode"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textColorHint="#ffb2b2b2"
            android:textColor="@color/text_common_bg"
            android:textSize="16sp"
            android:hint="@string/tv_forget_input_vcode"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:clickable="@{forget.isClick}"
            android:onClick="@{forget::setVCodeClick}"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{forget.str}"
            android:layout_marginRight="20dp"
            android:textColor="@{forget.colorInt}"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/forget_btn_bg"
        android:text="@string/tv_forget_next"
        android:textColor="@color/text_common_bg"
        android:gravity="center"
        android:textSize="16sp"
        android:onClick="@{forget::setNewPsd}"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/text_common_bg"
        android:textSize="14sp"
        android:text="@string/tv_forget_useless_no"/>

</LinearLayout>


</layout>
