<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>

        <variable
            name="me"
            type="com.lzyyd.hsq.viewmodel.MeViewModel" />
        
    </data>
    

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sure_order_address"
    android:paddingLeft="@dimen/padding_15"
    android:paddingRight="@dimen/padding_15"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_10"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_fans"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/grey_333333"
            android:layout_centerVertical="true"
            android:text="@string/me_fans"/>

        <LinearLayout
            android:id="@+id/ll_me_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_color3"
                android:textSize="@dimen/textsize14"
                android:text="@string/me_search_all"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/tv_more"
                android:typeface="@{me.setTypeFace()}"
                />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_qrcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="@{()->me.setJumpQrcode()}"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:src="@drawable/ic_me_qrcode"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_scan"
                android:textSize="@dimen/textsize12"
                android:textColor="@color/grey_color2"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shared"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:src="@drawable/ic_me_shared"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_shared_friend"
                android:textSize="@dimen/textsize12"
                android:textColor="@color/grey_color2"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>

</layout>