<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="collect"
            type="com.lzyyd.hsq.viewmodel.CollectViewModel" />

    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:onClick="@{()->collect.onBackPressed()}"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_back"
                android:textColor="@color/black"
                android:typeface="@{collect.setTypeFace()}"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/text_commom"
            android:textSize="18sp"
            android:text="@string/collect"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/common_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@mipmap/ic_collect_no_goods"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_collect_goods"
            android:layout_marginTop="@dimen/margin_25"
            android:textColor="#ff999999"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/go_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_no_goods_car"
            android:layout_marginTop="@dimen/margin_15"
            android:text="回首页"
            android:textColor="#ffe9413f"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>
</layout>